style: fix scrolling issue on mobile for expanded dropdown

--- a/src/style.css
+++ b/src/style.css
@@ -248,9 +248,12 @@ input:checked + .slider:before {
   display: none !important;
 }
 
+.sidebar {
+  overflow-y: auto;
+}
+
 .properties-section {
   flex: 1;
-  overflow-y: auto;
 }
 
 #property-list {
